WIP Authentication routes, done chat public

--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,12 @@
 
 <body ng-app="chat">
   <main>
-    <!--CONTENIDO DE LA PAGINA-->
     <div ui-view="main" class="mainContainer">
     </div>
   </main>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/dependencies/sails.io.js" url="http://192.168.3.102:1337" autoConnect="true" environment="development"></script>
+  <script src="js/dependencies/sails.io.js" autoConnect="false" environment="development"></script>
 </body>
 
 </html>
