--- a/app/app/chat/chat.html
+++ b/app/app/chat/chat.html
@@ -1,33 +1,46 @@
-<div class="navbar navbar-default navbar-fixed-top">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Socket Sails Demo - Maangalabs</a>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hi {{ vm.chatUser }}, Welcome to Cool Chat</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li ng-class="$root.currentState === 'chat' ? 'active': ''"><a ui-sref="chat">Chat <span class="sr-only">(current)</span></a></li>
+        <li ng-class="$root.currentState === 'users' ? 'active': ''" ><a href="#">Users Online</a></li>
+        <li><a href="" ng-click="vm.logout()">Logout</a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
   </div>
-</div>
-<div class="col-md-12" style="padding:100px">
+  <!-- /.container-fluid -->
+</nav>
+<div class="col-xs-12" style="padding:100px">
   <table class="table">
     <tr class="chat_message" ng-repeat="chat in vm.chatList">
-      <td class="col-md-12 td_class"><strong>{{ chat.user }} : </strong> {{ chat.message }}</td>
+      <td class="col-md-12 td_class">
+        <strong>{{ chat.user.name || vm.chatUser}}
+          :
+        </strong>
+        {{ chat.message }}</td>
     </tr>
   </table>
 </div>
 <div class="navbar navbar-inverse navbar-fixed-bottom">
-  <div class="col-lg-12">
-
+  <div class="row">
     <form class="form_chat">
-      <div class="col-lg-4 col-md-3">
-        <input type="text" ng-model="vm.chatUser" class="form-control" placeholder="TypeYourNameHere">
-      </div>
-
-      <div class="col-lg-6 col-md-5">
+      <div class="col-md-6 col-md-offset-2 col-xs-12">
         <input type="text" ng-model="vm.chatMessage" class="form-control" placeholder="TypeYourMessageHere">
       </div>
-      <button class="btn btn-default col-lg-2 col-md-2" ng-click="vm.sendMsg()">Send</button>
+      <button class="btn btn-default col-lg-2 col-md-2 col-xs-12" ng-click="vm.sendMsg()">Send</button>
     </form>
-
   </div>
 </div>
