--- a/app/app/register/register.html
+++ b/app/app/register/register.html
@@ -1,54 +1,46 @@
 <div class="register">
-      <div class="login-box material-form">
-        <!-- AQUI VA EL LOGO DEL SITIO -->
-          <div class="login-logo">
-              <img  src="assets/images/conecta.png" class="img-responsive xpectra-logo">
-              <!--<h4 class="apptitle">{{'CREDENTIALS'|translate}}</h4>-->
-              <h4 class="apptitle"></h4>
-          </div><!-- /.login-logo -->
-          <!-- AQUI VA EL RECUADRO PARA INTRODUCIR LA INFORMACIÓN -->
-          <!--  EMAIL, NAME, PASSWORD, CONFIRM PASSWORD-->
-          <div class="row form-login">
-              <div class="login-box-body">
-                  <form class="form" name="form">
-                      <div class="row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-xs-10">
-                          <div class="row">
-                            <div class="col-xs-12 form-group">
-                                <input  tabindex="1" tabindex type="email" class="form-control" placeholder="Email"  required />
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-xs-12 form-group">
-                                <input focusMe="true" tabindex="2" type="text" class="form-control" placeholder="User" required/>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-xs-12 form-group">
-                                <input focusMe="true" tabindex="2" type="password" class="form-control" placeholder="Password" required/>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-xs-12 form-group">
-                                <input focusMe="true" tabindex="2" type="password" class="form-control" placeholder="Confirm Password" required/>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-xs-12 form-group">
-                                  <button type="submit" class="col-xs-12 btn btn-primary">
-                                      <span  class="default-text">Register</span>
-                                  </button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-xs-1"></div>
-                       </div>
-                  </form>
+  <div class="login-box material-form">
+    <div class="login-logo">
+      <h1>Welcome to Cool Chat</h1>
+    </div>
+    <div class="row form-login">
+      <div class="login-box-body">
+        <form class="form" name="form" ng-submit="vm.register()">
+          <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+              <div class="row">
+                <div class="col-xs-12 form-group">
+                  <input tabindex="1" tabindex type="email" class="form-control" placeholder="Email" ng-model="vm.user.email" required />
+                </div>
               </div>
-          </div>
-          <div class="col-xs-12 text-center">
-              <a href="#" </a>
-          </div>
+              <div class="row">
+                <div class="col-xs-12 form-group">
+                  <input focusMe="true" tabindex="2" type="text" class="form-control" placeholder="Username" ng-model="vm.user.name" required/>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 form-group">
+                  <input focusMe="true" tabindex="2" type="password" class="form-control" placeholder="Password" ng-model="vm.user.password" required/>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 form-group">
+                  <input focusMe="true" tabindex="2" type="password" class="form-control" placeholder="Confirm Password" ng-model="vm.user.confirmPassword" required/>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 form-group">
+                  <button type="submit" class="col-xs-12 btn btn-primary">
+                    <span class="default-text">Register</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 text-center">
+              <a ui-sref="login">I already have an account</a>
+            </div>
+        </form>
+        </div>
       </div>
-</div>
+    </div>
+  </div>
