--- a/app/app/login/login.html
+++ b/app/app/login/login.html
@@ -1,11 +1,9 @@
 <div class="login">
   <div class="login-box material-form">
-    <div class="login-logo">
-      <h1>Welcome to CoolChat</h1>
-    </div>
+    <h1 class="title">Welcome to CoolChat</h1>
     <div class="row form-login">
       <div class="login-box-body">
-        <form class="form" name="form"  ng-submit="vm.login()">
+        <form class="form" name="form" ng-submit="vm.login()">
           <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
               <div class="row">
