--- a/app/app/register/register.html
+++ b/app/app/register/register.html
@@ -1,8 +1,6 @@
 <div class="register">
   <div class="login-box material-form">
-    <div class="login-logo">
-      <h1>Welcome to Cool Chat</h1>
-    </div>
+    <h1 class="title">Welcome to CoolChat</h1>
     <div class="row form-login">
       <div class="login-box-body">
         <form class="form" name="form" ng-submit="vm.register()">
