--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,13 @@
 
 <body ng-app="chat">
   <main>
+    <span us-spinner spinner-key="spinnerGeneric" spinner-theme="blue"></span>
     <div ui-view="main" class="mainContainer">
     </div>
   </main>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/dependencies/sails.io.js" autoConnect="false" environment="development"></script>
+  <script src="js/dependencies/sails.io.js" autoConnect="false" environment="production"></script>
 </body>
 
 </html>
